[tool.poetry]
name = "python-base"
version = "0.1.0"
description = "Python project starter template"
authors = ["David Adams"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "^6.1.1"
mypy = "^0.790"
pylama = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
