[tool.poetry]
name = "python-base"
version = "0.1.0"
description = "Python project starter template"
authors = ["David Adams"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
black = "^23.9.1"
pytest = "^7.4.2"
mypy = "^1.5.1"
pylama = "^8.4.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^68.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
